@@ -363,12 +363,18 @@ max size = 0
 ; default buffer length - Contols the counter bucket size ex.: for cpu counter.
 default buffer length = 1h
 
+; device filter - exclude matching network devices from gathering network counter metrics, ex. for temporary devices
+device filter = ^veth
+
 
 ; Windows system - Section for windows system checks and system settings
 [/settings/system/windows]
 
 ; default buffer length - Contols the counter bucket size ex.: for cpu counter.
 default buffer length = 1h
+
+; device filter - exclude matching network devices from gathering network counter metrics, ex. for temporary devices
+device filter = ^veth
 
 
 [/settings/updates]
