@@ -1394,3 +1394,9 @@ func (snc *Agent) stopPProfiler() {
 	snc.profileServer.Close()
 	snc.profileServer = nil
 }
+
+// counterCreate creates a new counter and adds some logging
+func (snc *Agent) counterCreate(category, key string, bufferLength time.Duration) {
+	log.Debugf("creating counter %s.%s (buffer: %s)", category, key, bufferLength.String())
+	snc.Counter.Create(category, key, bufferLength, SystemMetricsMeasureInterval)
+}
